--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -7,24 +7,27 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <%= link_to 'Create A Cocktail', new_cocktail_path, class: "btn btn-ghost"%>
+       <%= link_to 'See All Cocktails', cocktails_path, class: "btn btn-ghost"%>
     </ul>
   </div>
 </div>
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1486428263684-28ec9e4f2584?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80);">
+<div class="banner" style="background-image: url(https://images.unsplash.com/photo-1486428263684-28ec9e4f2584?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80);">
 
 <div class="container">
   <h1>Mixtini gives you fun cocktails ideas for every occasion !</h1>
   <p>Unleash your creativity and have fun, your favourite cocktail may be a sip away.</p>
-  <%= link_to 'See All Cocktails', cocktails_path, class: "btn btn-ghost"%>
+  <%= link_to 'Create A Cocktail', new_cocktail_path, class: "btn btn-ghost"%>
+
 </div>
 
 </div>
 
 <div class="cards">
   <% @cocktails.each do |c| %>
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://source.unsplash.com/random/900×700/?cocktails)">
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path c.photo, height: 300, width: 400, crop: :fill %>')">
   <%= link_to c.name, cocktail_path(c.id) %> <br/>
+  <%= link_to "", c , method: :delete, data: {confirm: "Are you sure?"}, class: "fa fa-trash"%>
   </div>
   <% end %>
+
 </div>
