--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -20,10 +20,12 @@
 <h1>Create A Cocktail</h1>
 <%= simple_form_for @cocktail do |f| %>
   <%= f.input :name, error: 'Please submit a unique name'%>
-  <%= f.button :submit, class: "btn btn-primary mt-3" %>
+  <%= f.input :photo, class: "btn btn-ghost" %>
+  <%= f.input :photo_cache, as: :hidden, class: "btn btn-ghost" %>
+  <%= f.button :submit, class: "btn btn-ghost mt-2" %>
 <% end %>
 
-<%= link_to 'Back to list', cocktails_path, class: "btn btn-primary my-3"%>
+<%= link_to 'Back to list', cocktails_path, class: "btn btn-ghost mt-3"%>
 </div>
 
 
