--- a/app/views/doses/_form.html.erb
+++ b/app/views/doses/_form.html.erb
@@ -1,7 +1,7 @@
 
-<h3>Create A Dose</h3>
+<h3>Add An Ingredient </h3>
 <%= simple_form_for [@cocktail, @dose] do |f| %>
   <%= f.input :ingredient_id, as: :select, collection: Ingredient.all, include_blank: true %> <br/ >
-  <%= f.input :description, error: 'Amount'%>
-  <%= f.button :submit, 'Add Dose', class: "btn btn-ghost" %>
+  <%= f.input :description%>
+  <%= f.button :submit, 'Add', class: "btn btn-ghost" %>
 <% end %>
